; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_schema_memcache.c_read_num_var.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_schema_memcache.c_read_num_var.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tl_tree = type opaque
%struct.tl_tree_var_num = type { i32, %struct.TYPE_2__, i8* }
%struct.TYPE_2__ = type { i32, i32, i32* }

@total_ref_cnt = common dso_local global i32 0, align 4
@persistent_tree_nodes = common dso_local global i32 0, align 4
@total_tree_nodes_existed = common dso_local global i32 0, align 4
@tl_pvar_num_methods = common dso_local global i32 0, align 4
@schema_version = common dso_local global i32 0, align 4
@FLAG_NOVAR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.tl_tree* @read_num_var(i32* %0) #0 {
  %2 = alloca %struct.tl_tree*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.tl_tree_var_num*, align 8
  store i32* %0, i32** %3, align 8
  %5 = call %struct.tl_tree_var_num* @zzmalloc(i32 32)
  store %struct.tl_tree_var_num* %5, %struct.tl_tree_var_num** %4, align 8
  %6 = call i32 @ADD_PMALLOC(i32 32)
  %7 = load %struct.tl_tree_var_num*, %struct.tl_tree_var_num** %4, align 8
  %8 = getelementptr inbounds %struct.tl_tree_var_num, %struct.tl_tree_var_num* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  store i32 0, i32* %9, align 8
  %10 = load %struct.tl_tree_var_num*, %struct.tl_tree_var_num** %4, align 8
  %11 = getelementptr inbounds %struct.tl_tree_var_num, %struct.tl_tree_var_num* %10, i32 0, i32 1
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 1
  store i32 1, i32* %12, align 4
  %13 = load i32, i32* @total_ref_cnt, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* @total_ref_cnt, align 4
  %15 = load i32, i32* @persistent_tree_nodes, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* @persistent_tree_nodes, align 4
  %17 = load i32, i32* @total_tree_nodes_existed, align 4
  %18 = add nsw i32 %17, 1
  store i32 %18, i32* @total_tree_nodes_existed, align 4
  %19 = load %struct.tl_tree_var_num*, %struct.tl_tree_var_num** %4, align 8
  %20 = getelementptr inbounds %struct.tl_tree_var_num, %struct.tl_tree_var_num* %19, i32 0, i32 1
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 2
  store i32* @tl_pvar_num_methods, i32** %21, align 8
  %22 = load i32, i32* @schema_version, align 4
  %23 = icmp sge i32 %22, 2
  br i1 %23, label %24, label %28

24:                                               ; preds = %1
  %25 = call i8* (...) @tl_parse_int()
  %26 = load %struct.tl_tree_var_num*, %struct.tl_tree_var_num** %4, align 8
  %27 = getelementptr inbounds %struct.tl_tree_var_num, %struct.tl_tree_var_num* %26, i32 0, i32 2
  store i8* %25, i8** %27, align 8
  br label %32

28:                                               ; preds = %1
  %29 = call i8* (...) @tl_parse_long()
  %30 = load %struct.tl_tree_var_num*, %struct.tl_tree_var_num** %4, align 8
  %31 = getelementptr inbounds %struct.tl_tree_var_num, %struct.tl_tree_var_num* %30, i32 0, i32 2
  store i8* %29, i8** %31, align 8
  br label %32

32:                                               ; preds = %28, %24
  %33 = call i8* (...) @tl_parse_int()
  %34 = ptrtoint i8* %33 to i32
  %35 = load %struct.tl_tree_var_num*, %struct.tl_tree_var_num** %4, align 8
  %36 = getelementptr inbounds %struct.tl_tree_var_num, %struct.tl_tree_var_num* %35, i32 0, i32 0
  store i32 %34, i32* %36, align 8
  %37 = call i64 (...) @tl_parse_error()
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %40

39:                                               ; preds = %32
  store %struct.tl_tree* null, %struct.tl_tree** %2, align 8
  br label %66

40:                                               ; preds = %32
  %41 = load %struct.tl_tree_var_num*, %struct.tl_tree_var_num** %4, align 8
  %42 = getelementptr inbounds %struct.tl_tree_var_num, %struct.tl_tree_var_num* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = load i32*, i32** %3, align 8
  %45 = load i32, i32* %44, align 4
  %46 = icmp sge i32 %43, %45
  br i1 %46, label %47, label %53

47:                                               ; preds = %40
  %48 = load %struct.tl_tree_var_num*, %struct.tl_tree_var_num** %4, align 8
  %49 = getelementptr inbounds %struct.tl_tree_var_num, %struct.tl_tree_var_num* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 8
  %51 = add nsw i32 %50, 1
  %52 = load i32*, i32** %3, align 8
  store i32 %51, i32* %52, align 4
  br label %53

53:                                               ; preds = %47, %40
  %54 = load %struct.tl_tree_var_num*, %struct.tl_tree_var_num** %4, align 8
  %55 = getelementptr inbounds %struct.tl_tree_var_num, %struct.tl_tree_var_num* %54, i32 0, i32 1
  %56 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %55, i32 0, i32 0
  %57 = load i32, i32* %56, align 8
  %58 = load i32, i32* @FLAG_NOVAR, align 4
  %59 = and i32 %57, %58
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %61, label %62

61:                                               ; preds = %53
  store %struct.tl_tree* null, %struct.tl_tree** %2, align 8
  br label %66

62:                                               ; preds = %53
  %63 = load %struct.tl_tree_var_num*, %struct.tl_tree_var_num** %4, align 8
  %64 = bitcast %struct.tl_tree_var_num* %63 to i8*
  %65 = bitcast i8* %64 to %struct.tl_tree*
  store %struct.tl_tree* %65, %struct.tl_tree** %2, align 8
  br label %66

66:                                               ; preds = %62, %61, %39
  %67 = load %struct.tl_tree*, %struct.tl_tree** %2, align 8
  ret %struct.tl_tree* %67
}

declare dso_local %struct.tl_tree_var_num* @zzmalloc(i32) #1

declare dso_local i32 @ADD_PMALLOC(i32) #1

declare dso_local i8* @tl_parse_int(...) #1

declare dso_local i8* @tl_parse_long(...) #1

declare dso_local i64 @tl_parse_error(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
